--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,36 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+.filter-block {
+  height: 70px;
+  float: left;
+  border-radius: 5px;
+  margin: 10px 0px 0px 10px;
+  border: 1px solid rgb(190, 190, 190);
+  width: fit-content;
+}
+
+.filter-label {
+  margin-left: 20px;
+  line-height: 84px;
+}
+
+.filter-btn-block {
+  margin: 5px;
+}
+
+.clearfix:after {
+  content: '';
+  display: table;
+  clear: both;
 }
